# api.yaml
@@ -157,20 +157,53 @@ paths:
                   type: integer
                 subModuleId:
                   type: integer
-                accessId:
-                  type: integer
+                isAll:
+                  type: boolean
+                isView:
+                  type: boolean
+                isUpdate:
+                  type: boolean
+                isCreate:
+                  type: boolean
+                isDelete:
+                  type: boolean
       responses:
         200:
           description: Success
         500:
           description: Internal server error
 
-  /group/delete/permission/{permissionId}:
+  /group/update/permission/{permissionId}:
+    put:
+      tags:
+        - "Users Group Access"
+      ssummary: Update group permission
+      description: Update specifiction module permission
+      parameters:
+        - name: permissionId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: body
+          in: body
+          required: true
+          description: sub-modules access details
+          schema:
+            type: object
+      responses:
+        200:
+          description: Success
+        500:
+          description: Internal server error
+
+  /group/delete/module/{permissionId}:
     delete:
       tags:
         - "Users Group Access"
-      ssummary: Deleting group permission
-      description: Deleting specifiction module permission
+      ssummary: Delete moduel from group
+      description: Update specifiction module from group
       parameters:
         - name: permissionId
           in: path
