# src/routes/module.routes.ts
@@ -12,9 +12,11 @@ router.route("/group/create").post(moduleController.createGroup);
 router.route("/group/permission/add").post(moduleController.addPermission);
 router.route("/group/:groupId").get(moduleController.getGroup);
 router
-  .route("/group/delete/permission/:permissionId")
-  .delete(moduleController.removePermission);
-
+  .route("/group/update/permission/:permissionId")
+  .put(moduleController.removePermission);
+router
+  .route("/group/delete/module/:permissionId")
+  .delete(moduleController.deleteModuleFromGrop);
 // API to get all access names.
 router.route("/access/list").get(moduleController.getAllAccess);
 
